--- a/index.html
+++ b/index.html
@@ -1516,12 +1516,47 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="section section__fes4">
+            <div class="section section__fes4">
                 <div class="sidebar sidebar__fes4">
                     <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/sidebar/4th_fes.png" />
                 </div>
-                <div class="background background__fes4"></div>
-            </div> -->
+                <div class="background background__fes4">
+                    <div class="card fes-card honoka">
+                        <div class="unidolized">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/087_fes4_honoka.png" />
+                        </div>
+                        <div class="idolized displayNone">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/087_fes4_honoka_idolized.png" />
+                        </div>
+                        <div class="rainbow invisible invisible2">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/rainbow/rainbow.png" />
+                        </div>
+                        <div class="signature invisible">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/honoka.png" />
+                        </div>
+                        <div class="limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
+                    <div class="card fes-card rina">
+                        <div class="unidolized">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/088_fes4_rina.png" />
+                        </div>
+                        <div class="idolized displayNone">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/088_fes4_rina_idolized.png" />
+                        </div>
+                        <div class="rainbow invisible invisible2">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/rainbow/rainbow.png" />
+                        </div>
+                        <div class="signature invisible">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/rina.png" />
+                        </div>
+                        <div class="limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="section section__party1">
                 <div class="sidebar sidebar__party1">
                     <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/sidebar/1st_party.png" />
