--- a/index.html
+++ b/index.html
@@ -1555,6 +1555,90 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
+                    <div class="icon eli displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/eli.png"/>
+                    </div>
+                    <div class="icon kotori displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/kotori.png"/>
+                    </div>
+                    <div class="icon chika displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/chika.png"/>
+                    </div>
+                    <div class="icon riko displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/riko.png"/>
+                    </div>
+                    <div class="icon kanan displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/kanan.png"/>
+                    </div>
+                    <div class="icon ayumu displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ayumu.png"/>
+                    </div>
+                    <div class="icon kasumi displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/kasumi.png"/>
+                    </div>
+                    <div class="icon shizuku displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/shizuku.png"/>
+                    </div>
+                    <div class="icon karin displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/karin.png"/>
+                    </div>
+                    <div class="icon umi displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/umi.png"/>
+                    </div>
+                    <div class="icon rin displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/rin.png"/>
+                    </div>
+                    <div class="icon maki displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/maki.png"/>
+                    </div>
+                    <div class="icon dia displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/dia.png"/>
+                    </div>
+                    <div class="icon you displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/you.png"/>
+                    </div>
+                    <div class="icon yoshiko displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/yoshiko.png"/>
+                    </div>
+                    <div class="icon ai displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ai.png"/>
+                    </div>
+                    <div class="icon kanata displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/kanata.png"/>
+                    </div>
+                    <div class="icon setsuna displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/setsuna.png"/>
+                    </div>
+                    <div class="icon emma displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/emma.png"/>
+                    </div>
+                    <div class="icon nozomi displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/nozomi.png"/>
+                    </div>
+                    <div class="icon hanayo displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/hanayo.png"/>
+                    </div>
+                    <div class="icon nico displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/nico.png"/>
+                    </div>
+                    <div class="icon hanamaru displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/hanamaru.png"/>
+                    </div>
+                    <div class="icon mari displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/mari.png"/>
+                    </div>
+                    <div class="icon ruby displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ruby.png"/>
+                    </div>
+                    <div class="icon shioriko displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/shioriko.png"/>
+                    </div>
+                    <div class="icon mia displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/mia.png"/>
+                    </div>
+                    <div class="icon lanzhu displayNone">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/lanzhu.png"/>
+                    </div>
                 </div>
             </div>
             <div class="section section__party1">
