--- a/index.html
+++ b/index.html
@@ -2122,11 +2122,25 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
+                    <div class="card party-card nozomi">
+                        <div class="unidolized">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/party/029_party1_nozomi.png" />
+                        </div>
+                        <div class="idolized displayNone">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/party/029_party1_nozomi_idolized.png" />
+                        </div>
+                        <div class="rainbow invisible invisible2">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/rainbow/rainbow.png" />
+                        </div>
+                        <div class="signature invisible">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/nozomi.png" />
+                        </div>
+                        <div class="limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
                     <div class="icon ayumu displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ayumu.png"/>
-                    </div>
-                    <div class="icon nozomi displayNone">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/nozomi.png"/>
                     </div>
                 </div>
             </div>
