update new cards

--- a/index.html
+++ b/index.html
@@ -1555,6 +1555,40 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
+                    <div class="card fes-card hanamaru">
+                        <div class="unidolized">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/089_fes4_hanamaru.png" />
+                        </div>
+                        <div class="idolized displayNone">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/089_fes4_hanamaru_idolized.png" />
+                        </div>
+                        <div class="rainbow invisible invisible2">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/rainbow/rainbow.png" />
+                        </div>
+                        <div class="signature invisible">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/hanamaru.png" />
+                        </div>
+                        <div class="limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
+                    <div class="card fes-card ayumu">
+                        <div class="unidolized">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/090_fes4_ayumu.png" />
+                        </div>
+                        <div class="idolized displayNone">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/090_fes4_ayumu_idolized.png" />
+                        </div>
+                        <div class="rainbow invisible invisible2">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/rainbow/rainbow.png" />
+                        </div>
+                        <div class="signature invisible">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/ayumu.png" />
+                        </div>
+                        <div class="limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
                     <div class="icon eli displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/eli.png"/>
                     </div>
@@ -1569,9 +1603,6 @@
                     </div>
                     <div class="icon kanan displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/kanan.png"/>
-                    </div>
-                    <div class="icon ayumu displayNone">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ayumu.png"/>
                     </div>
                     <div class="icon kasumi displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/kasumi.png"/>
@@ -1620,9 +1651,6 @@
                     </div>
                     <div class="icon nico displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/nico.png"/>
-                    </div>
-                    <div class="icon hanamaru displayNone">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/hanamaru.png"/>
                     </div>
                     <div class="icon mari displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/mari.png"/>
@@ -2274,6 +2302,23 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
+                    <div class="card normal-card ai">
+                        <div class="unidolized">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/normal/008_normal_ai.png" />
+                        </div>
+                        <div class="idolized displayNone">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/normal/008_normal_ai_idolized.png" />
+                        </div>
+                        <div class="rainbow invisible invisible2">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/rainbow/rainbow.png" />
+                        </div>
+                        <div class="signature invisible">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/ai.png" />
+                        </div>
+                        <div class="limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
                     <div class="icon honoka displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/honoka.png"/>
                     </div>
@@ -2303,9 +2348,6 @@
                     </div>
                     <div class="icon you displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/you.png"/>
-                    </div>
-                    <div class="icon ai displayNone">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ai.png"/>
                     </div>
                     <div class="icon kanata displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/kanata.png"/>
